Bug 162852 - When adjusting Comment column width to its minimum possible width, it gets resized to its maximum possible width
Summary: When adjusting Comment column width to its minimum possible width, it gets re...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Comments
  Show dependency treegraph
 
Reported: 2024-09-08 12:19 UTC by Rafael Lima
Modified: 2025-08-14 10:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-09-08 12:19:44 UTC
Steps to reproduce
1) In Writer 24.8, create a document and add some comments to view the comments sidebar
2) Drag the right edge of the comment sidebar (to resize it) and move towards the document
3) Keep dragging and release the mouse when the pointer is above the document

Expected results
The comment sidebar should be resized to its lowest possible value

Actual results
The comment sidebar is resized to its highest possible value

System info
Version: 24.8.0.1.0+ (X86_64) / LibreOffice Community
Build ID: 9bba9dede3def626e3adab6696a911762e25b7ff
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded

Also present in 25.2 master.
Comment 1 Rafael Lima 2024-09-08 12:36:08 UTC
Patch here
https://gerrit.libreoffice.org/c/core/+/173016
Comment 2 V Stuart Foote 2024-09-08 14:10:12 UTC
Confirmed the jump to maximum when drag cursor passes over document edge.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b61a0737e3600aadf42f28a15c70aface9ab61e
CPU threads: 8; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 3 Xisco Faulí 2024-09-08 23:25:05 UTC
Regression from 

commit b9368eab798a766b5a24658c783a6ee73dbf2caa
Author: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Date:   Mon Jan 22 10:57:06 2024 +0100

    tdf#159145 Allow changing width of comment column on right border
    
    not only on the ruler as implemented in ac2720dcbe4e51e7f6733a385b5f7b571c6431e9
Comment 4 Commit Notification 2024-09-09 06:29:53 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/005eaf799a1e5424751d059afc09c92ea9b29566

tdf#162852 Fix minimum comment sidebar width

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-09 09:59:29 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/4bbc45eb48f91a552a9583b6aad4d59b2dac96f8

tdf#162852 Fix minimum comment sidebar width

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-09-09 10:12:41 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-1":

https://git.libreoffice.org/core/commit/efa83921498980c43c21aba6678a1f0a587ebbf3

tdf#162852 Fix minimum comment sidebar width

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 pearl44snow 2025-08-14 10:24:49 UTC Comment hidden (spam)