tdf#162852 Fix minimum comment sidebar width

If the mouse is released over the document, the value of nPxWidth can get negative, so we need a signed integer variable here to make std::clamp work as expected.

Change-Id: I721b53e9eddee4f02ad31718f8c7187242ba44e1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173016
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 005eaf799a1e5424751d059afc09c92ea9b29566)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173021
(cherry picked from commit 4bbc45eb48f91a552a9583b6aad4d59b2dac96f8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173024
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>